Fixes GitHub Theme URIs

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -11,7 +11,7 @@
  * Domain Path: /languages
  * Text Domain: motorsangre
  * Tags: blue, gray, white, light, one-column, three-columns, responsive-layout, custom-background, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, microformats, post-formats, rtl-language-support, theme-options, threaded-comments, translation-ready
- * GitHub Theme URI: https://github.com/kimar/wp-motorsangre-theme
+ * GitHub Theme URI: https://github.com/kimar/motorsangre
  */
 /* Gutters */
 /* Media Break Points */
